=================
Changes for Crate
=================

Unreleased
==========

 - Added case-insensitive regex operator ~*

 - Support PCRE compatible regular expressions

 - updated crate-admin version to 0.11.3 which contains following changes:

    - fixed bug that showed custom schemas in the table list
      as often as the amount of tables in that custom schema

 - Added support for the ``std_dev``, ``variance`` and ``geometric_mean``
   aggregation functions

 - Added support for the CURRENT_TIMESTAMP expression

 - Throw an error while using unknown column references in ``SELECT``
   statements while parent's policy is not of type ``ignored``

 - Added support for the datetime function ``extract (field from source)``

 - Support column referencing in ``Update`` statement assignment
   expression

 - Removed undocumented feature: It is no longer possible to use sys
   expressions in any context.

 - don’t allow full qualified names in UPDATE assignments, INSERT and
   INSERT INTO

 - The ``sys.operations`` table has now a ``_nodes`` system column
   which exposes information about the node the operation runs on.

2015/02/03 0.46.4
=================

 - Fix: group by queries with a having clause without the group key
   being selected failed

 - Fix: Force UTF8 encoding in file reading collector to avoid JVM's default encoding settings

 - Fix: Filtering on a routing column sometimes didn't work if the value was an
   empty string

 - Fix: Bulk inserts with mixed but compatible types (e.g. int and long) failed

 - Fix: removed unsupported syntax from ``Update`` synposis

2015/02/03 0.45.8
=================

 - Fix: Force UTF8 encoding in file reading collector to avoid JVM's default encoding settings

 - Fix: Fixed global count using non-existing column in the where clause

 - Fix: Bulk inserts with mixed but compatible types (e.g. int and long) failed

 - Fix: removed unsupported syntax from ``Update`` synposis

2015/01/19 0.46.3
2015/01/19 0.45.7