@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Throw an error while using unknown column references in ``SELECT``
+   statements while parent's policy is not of type ``ignored``
+
  - Added case-insensitive regex operator ~*
 
  - Support PCRE compatible regular expressions
@@ -23,6 +26,8 @@ Unreleased
    statements while parent's policy is not of type ``ignored``
 
  - Added support for the datetime function ``extract (field from source)``
+
+ - Fix: removed unsupported syntax from ``Update`` synposis
 
  - Support column referencing in ``Update`` statement assignment
    expression
